Fixed layout on categorial-details page, added custom scrollbar

--- a/src/app/pages/kegiatan/kategorial-details/kategorial-details.scss
+++ b/src/app/pages/kegiatan/kategorial-details/kategorial-details.scss
@@ -1,13 +1,49 @@
-.title {
-  margin-top: 30px;
+.title,
+.info-title {
+  margin-top: 20px;
+  padding-top: 10px;
   text-align: center;
   font-weight: bold;
 }
 
+.info-title {
+  text-align: left;
+}
+
+.profile {
+  margin-top: 10px;
+  padding: 0 15px 15px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 15px;
+  height: 40vh;
+  overflow-y: scroll;
+}
+
 div.deskripsi {
-  margin-top: 25px;
+  margin-top: 20px;
 }
 
 .deskripsi {
   text-align: justify;
+}
+
+ul {
+  padding-left: 0;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px var(--palette-L2);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--palette-D2);
+  border-radius: 10px;
 }
