--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,23 @@ body {
 h1, h2, h3, h4, h5 {
   font-family: "Montserrat", "Helvetica Neue", sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px var(--palette-L1);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--palette-D1);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb {
+  background: var(--palette-D1);
+}
